src/index.css
@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');

:root
{
    background-color: hsla(252, 100%, 7%, 0.74);
    background: linear-gradient(70deg, hsla(252, 100%, 7%, 0.8), hsla(252, 100%, 7%, .9));
    font-family: 'Courier New', Courier, monospace;
    font-size: 3vmin;
    max-width: 100%;
    overflow-x: hidden;
}

html {
    scroll-behavior: smooth;
}

body {
    padding: 0;
    margin: 0;
}

nav {
    position: fixed;
    right: 0;
    z-index: 10;
    color: whitesmoke;
    text-shadow:1px 1px 10px rgb(0, 0, 0), 1px 1px 10px rgb(0, 0, 0);
    font-size: 3vmax;
    background-color: hsla(252, 100%, 7%, 0.5);
    font-weight: 700;

    animation: entranceFromRight 1.5s;
}

nav ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

nav ul li {
    text-align: right;
    border-bottom: 3px solid white;
}

a {
    color: rgb(255, 255, 255);
    text-decoration: none;
    transition-duration: 0.2s;
}

nav a:hover {
    color: hsl(350, 100%, 88%);
    text-decoration: underline;
    text-decoration-color: whitesmoke;
}

.p1 {
    font-size: 1em;
    padding: 5%;
    width: 60%;
    margin: auto;
}

.frontpage {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100vw;
    height: 100%;
    height: calc(var(--vh, 1vh) * 100);
    position: relative;
}

.headshot {
    opacity: 0.7;
    max-height: 100vh;
    max-width: 90vw;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 0;
    -webkit-filter: drop-shadow(0vmax 0vmax 2vmax black);
    filter: drop-shadow(0vmax 0vmax 2vmax black);

    animation: fadeIn 1s;
}

.title {
    position: absolute;
    top: 20vmax;
    left: 10vmax;
    text-align: left;
    font-size: 6vmax;
    font-weight: bolder;
    color: whitesmoke;
    z-index: 5;
    text-shadow:1px 1px 10px rgb(0, 0, 0), 1px 1px 10px rgb(0, 0, 0);

    animation: fadeFromAbove 1s;
}

.name {
    font-family: 'Koulen', cursive;
    line-height: 0;
}

.title1 {
    font-size: 3vmax;
    font-style: italic;
}

.intro {
    background-color: whitesmoke;
    margin: 0;
    margin-top: -3vmin;
    margin-bottom: -3vmin;
    text-align: justify;
    position:relative;
}


.about {
    background-color: whitesmoke;
    margin: 0;
    text-align: justify;
    position:relative;
}

.projectimg {
    width: 25vmax;
}

.container:hover {
    box-shadow: 0 8vmax 16vmax 0 rgba(0,0,0,0.2);
}

.projects {
    justify-content: space-around;
    align-items: stretch;
    display: flex;
    overflow: hidden;
}

.container {
    padding: 10px;
    margin: 3vmax 0;
    width: 25vmax;
    background-color: whitesmoke;
    text-align: center;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    display: inline-block;
    border-bottom: .5vmin solid hsl(350, 100%, 80%);
    border-left: .75vmin solid hsl(350, 100%, 80%);
    border-radius: 1vmin;
}

.projecttitle {
    margin: 0;
}

.project-description {
    font-size: 1rem;
    margin: 0;
}

.clickme {
    background-color: hsla(252, 100%, 7%, 0.8);
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 2vmin;
    transition-duration: 0.1s;
}

.clickme:hover {
    background-color: hsl(350, 100%, 88%);
}

::-webkit-scrollbar {
    background-color: hsla(252, 50%, 15%, 0.99);;
    width: 12px;
}

::-webkit-scrollbar-track {
    background-color: hsla(252, 50%, 15%, 0.99);
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
    box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    background-color: hsla(252, 100%, 7%, 0.74);
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
    box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
}

::-webkit-scrollbar-thumb:hover {
    background-color: hsla(252, 100%, 7%, 0.9);
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
    box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
}


/* Media Queries */
@media screen and (min-width: 644px)  {
    nav {
        position: absolute;
        bottom: 0;
        right: 0;
    }
    nav ul {
        text-align: center;
    }

    nav ul li {
        text-align: center;
        display: inline-block;
        border-bottom: 0px;
        /* border-left: 3px solid white; */
        padding-left: 2vh;
        padding-right: 2vh;
    }

    .sticky {
        position: fixed;
        top: 0;
        height: 3.5vmax;
    }
}

@media screen and (max-width: 900px)  {
    .p1 {
        padding: 10%;
        width: 80%;
        font-size: 1.5rem;
    }
    .projects {
        display: grid;
        justify-content: center;
        font-size: 1.5rem;
    }
    .container {
        width: 80%;
        margin: auto;
        margin-top: 2rem;
    }
    .projectimg {
        width: 80%;
    }
    .clickme {
      font-size: 1rem;
    }
}




/* Animations */
@keyframes fadeIn {
    from {
        opacity: 0;
        transform: translate(0);
    }

    to {
        opacity: 0.7;
        transform: translate(0);
    }
}

@keyframes fadeFromAbove {
    from {
        opacity: 0;
        transform: translate(0, -5rem)
    }

    to {
        opacity: 1;
        transform: translate(0)
    }
}

@keyframes entranceFromRight {
    from {
        opacity: 0;
        transform: translate(5rem, 0)
    }

    to {
        opacity: 1;
        transform: translate(0)
    }
}


/* On scroll become visible */
.fade {
    transition-duration: 1.5s;
}
.notloaded {
    opacity: 0;
    transform: translate(-5rem, 0);
    visibility: hidden;
    overflow: hidden;
  }
  .notloaded.transition {
    opacity: 1;
    transform: translate(0);
    visibility: visible;
  }

